# site

./: .gitignore  .ocamlformat  README.md  dune-project  index.md
.github/workflows/: deploy.yml
articles/: dependency-injection.md  dune  fold-gof.md  rank-aggregation.md
articles/lib/: dune  rank_aggregation.ml  row_reader.ml
css/: reset.css  style.css  syntax.css
lib/: dune  markdown.ml  markdown.mli  repr.ml  repr.mli  resolver.ml  resolver.mli  rule.ml  rule.mli
opam/: site.opam  site.opam.template
templates/: article.html  articles.html  main.html
